--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,23 @@ a{
 }
 ul, ol {
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
-
-
-
+.container {
+    width: 1150px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+.header {
+    
+}
+.header-container {
+display: flex;
+}
+.navigation {
+    display: flex;
+}
   .title {
 font-weight: 700;
 font-size: 36px;
@@ -50,9 +63,13 @@ color: #434455;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 
-
+.nav-list {
+    display: flex;
+    gap: 40px;
+}
 .nav-link{
     font-weight: 500;
     font-size: 16px;
@@ -68,8 +85,12 @@ color: #434455;
 
 .address{
     font-style: normal;
+    margin-left: auto;
 }
-
+.address-list {
+    display: flex;
+    gap: 40px;
+}
 .address-link{   
     font-size: 16px;
     line-height: 1.5;
