--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,15 @@ font-family: 'Roboto', sans-serif;
 color: #434455;
 background-color: #fff;
 }
-
+h1.
+h2.
+h3.
+h4.
+h5.
+h6.
+p {
+    margin: 0;
+}
 a{
     text-decoration: none;
 }
@@ -12,19 +20,26 @@ ul, ol {
     padding: 0;
     margin: 0;
 }
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 .container {
     width: 1150px;
     padding: 0 15px;
     margin: 0 auto;
 }
 .header {
-    
+    border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
 display: flex;
+align-items: center;
 }
 .navigation {
     display: flex;
+    align-items: center;
 }
   .title {
 font-weight: 700;
@@ -49,7 +64,18 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
   }
-
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 /* =================HEADER================= */
 .logo-part-header{
     color: #2e2f42;
@@ -76,6 +102,8 @@ color: #434455;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0;
+    display: block;
 }
 
 .nav-link:hover,
@@ -104,10 +132,18 @@ color: #434455;
 }
 /* =================HERO================= */
 .hero {
-
 background: #2e2f42;
-
 }
+
+.hero-wrap {
+    background: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
+}
+.hero-container {
+    align-items: center;
+}
+
 .hero-title {
 font-family: "Roboto", sans-serif;    
 font-weight: 700;
@@ -116,8 +152,9 @@ line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
-
-
+max-width: 496px;
+margin-bottom: 48px;
+margin: 0 auto;
 }
 
 .hero-ord-btn {
@@ -126,26 +163,31 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #fff;
-
-
-
-
 background: #4d5ae5;
+display: block;
+margin: 0 auto;
+border-radius: 4px;
+padding: 16px 32px;
+gap: 10px;
+border: none;
 cursor: pointer;
 }
 
 .hero-ord-btn:hover,
-.hero-ord-btn:focus{
-    
-
-   
-background: #404bbf;
+.hero-ord-btn:focus {
+    background: #404bbf;
     }
 
 /* =================ADVANTAGES================= */
 .advantages {
+    padding-top: 92px;
+    padding-right: 125px;
+    padding-left: 187px;
+    padding-bottom: 147px;
 }
-
+.advantages-container {
+    align-items: center;
+}
 .advantages-title {
     font-weight: 700;
     font-size: 36px;
@@ -156,10 +198,13 @@ background: #404bbf;
 }
 
 .advantages-menu-list {
+    display: flex;
+    gap: 24px;
     list-style: none;
 }
 
 .advantages-menu-item {
+    flex-basis: calc((100% - 72px) / 4);
 }
 
 .advantages-menu-title {
@@ -175,15 +220,19 @@ background: #404bbf;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
-
+text-align: left;
 }
 
 /* =================TEAM================= */
 
 .team {
 background: #f4f4fd;
+padding-top: 147px;
+padding-bottom: 120px;
 }
-
+.team-container {
+    align-items: center;
+}
 .team-title {
     text-transform: capitalize;
     font-family: "Roboto", sans-serif;
@@ -191,40 +240,59 @@ font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
-text-align: center;
 color: #2e2f42;
 }
 .team-menu-list {
+    display: flex;
+    gap: 24px;
 }
 
 .team-menu-item {
     background: #ffffff;
+    width: calc((100% - 3 * 24px) / 4);
+    border-radius: 0 0 4px 4px;
+    
 }
 
 .team-image {
 
 }
+.team-item {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+
 
 .team-menu-title {
-    font-weight: 500;
+font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+text-align: center;
+padding-top: 32px;
+margin-bottom: 8px;
 }
 
 .team-menu-text {
-    font-size: 16px;
+font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+text-align: center;
+padding-bottom: 32px;
 }
 
 /* =================PORTFOLIO================= */
 
 .portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
-
+.portfolio-container {
+    align-items: center;
+}
 .portfolio-title {
     text-transform: capitalize;
     font-family: "Roboto", sans-serif;
@@ -234,17 +302,32 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
+margin-bottom: 8px;
 }
 
 .portfolio-menu-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 48px;
     background: 
     #ffffff;
 }
 
 .portfolio-menu-item {
+   
+   
+    width: calc((100% - 48px) / 3);
 }
 
+.container-item
+{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 .portfolio-images {
+    
 
 }
 
@@ -266,11 +349,16 @@ color: #434455;
 /* =================FOOTER================= */
 
 .footer {
-
+    padding-top: 120px ;
+    padding-bottom: 0;
 background: #2e2f42;
 
 }
 
+.container-footer {
+    display: inline-block;
+    margin-bottom: 16px;
+}
 .logo-part-footer{    
 color: #f4f4fd;
 }
