--- a/css/styles.css
+++ b/css/styles.css
@@ -133,15 +133,14 @@ color: #434455;
 /* =================HERO================= */
 .hero {
 background: #2e2f42;
+padding-top: 188px;
+padding-bottom: 188px;
 }
 
-.hero-wrap {
-    background: #2e2f42;
-    padding-top: 188px;
-    padding-bottom: 188px;
-}
 .hero-container {
     align-items: center;
+  
+ 
 }
 
 .hero-title {
@@ -153,8 +152,7 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
 max-width: 496px;
-margin-bottom: 48px;
-margin: 0 auto;
+margin: 0 auto 48px;
 }
 
 .hero-ord-btn {
@@ -180,10 +178,7 @@ cursor: pointer;
 
 /* =================ADVANTAGES================= */
 .advantages {
-    padding-top: 92px;
-    padding-right: 125px;
-    padding-left: 187px;
-    padding-bottom: 147px;
+    padding: 120px 0;
 }
 .advantages-container {
     align-items: center;
@@ -271,8 +266,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
 text-align: center;
-padding-top: 32px;
-margin-bottom: 8px;
+margin-bottom: 72px;
 }
 
 .team-menu-text {
@@ -281,7 +275,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 text-align: center;
-padding-bottom: 32px;
+
 }
 
 /* =================PORTFOLIO================= */
@@ -349,15 +343,14 @@ color: #434455;
 /* =================FOOTER================= */
 
 .footer {
-    padding-top: 120px ;
-    padding-bottom: 0;
+    padding-top: 100px ;
+    padding-bottom: 100;
 background: #2e2f42;
 
 }
 
 .container-footer {
-    display: inline-block;
-    margin-bottom: 16px;
+  
 }
 .logo-part-footer{    
 color: #f4f4fd;
@@ -366,11 +359,13 @@ color: #f4f4fd;
 .logo 
 {font-family: "Raleway", sans-serif;
     font-weight: 700;
-    font-size: 18px
+    font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-text {
