--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ img {
     height: auto;
 }
 .container {
-    width: 1150px;
+    width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -168,6 +168,7 @@ border-radius: 4px;
 padding: 16px 32px;
 gap: 10px;
 border: none;
+min-width: 169px;
 cursor: pointer;
 }
 
@@ -344,7 +345,7 @@ color: #434455;
 
 .footer {
     padding-top: 100px ;
-    padding-bottom: 100;
+    padding-bottom: 100px;
 background: #2e2f42;
 
 }
