--- a/css/styles.css
+++ b/css/styles.css
@@ -198,6 +198,7 @@ cursor: pointer;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px; 
 }
 
 .advantages-menu-text {
