--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-margin-bottom: 8px;
+margin-bottom: 72px;
 }
 
 .portfolio-menu-list {
@@ -333,6 +333,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+margin-bottom: 8px
 }
 
 .portfolio-menu-text {
