--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ color: #434455;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    
     margin-right: 76px;
 }
 
@@ -369,7 +370,7 @@ color: #f4f4fd;
     text-transform: uppercase;
     color: #4d5ae5;
     display: inline-block;
-    margin-bottom: 16px;
+    
 }
 
 .footer-text {
@@ -377,4 +378,5 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
+max-width: 264px;
 }
