--- a/css/styles.css
+++ b/css/styles.css
@@ -312,9 +312,7 @@ margin-bottom: 72px;
     #ffffff;
 }
 
-.portfolio-menu-item {
-   
-   
+.portfolio-menu-item {  
     width: calc((100% - 48px) / 3);
 }
 
@@ -370,7 +368,7 @@ color: #f4f4fd;
     text-transform: uppercase;
     color: #4d5ae5;
     display: inline-block;
-    
+    padding-bottom: 16px;
 }
 
 .footer-text {
